--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,11 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxpkg
           haxelib run hxpkg install
-          haxelib install hxcpp > /dev/null --quiet
+          cd .haxelib/hxcpp/git/tools/run
+          haxe compile.hxml
+          cd ../hxcpp
+          haxe compile.hxml
+          cd ../../../../..
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
@@ -63,7 +67,11 @@ jobs:
           haxelib setup C:/haxelib
           haxelib install hxpkg
           haxelib run hxpkg install
-          haxelib install hxcpp > /dev/null --quiet
+          cd .haxelib/hxcpp/git/tools/run
+          haxe compile.hxml
+          cd ../hxcpp
+          haxe compile.hxml
+          cd ../../../../..
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -90,7 +98,11 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hxpkg
           haxelib run hxpkg install
-          haxelib install hxcpp > /dev/null --quiet
+          cd .haxelib/hxcpp/git/tools/run
+          haxe compile.hxml
+          cd ../hxcpp
+          haxe compile.hxml
+          cd ../../../../..
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
