--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
+          haxelib install hxcpp --quiet
           haxelib install hxpkg
           haxelib run hxpkg install
       - name: Create Version Tag
@@ -40,7 +41,7 @@ jobs:
       - name: Compile
         run: |
           haxelib fixrepo
-          haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}"
+          haxelib run lime build Project.xml linux
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
@@ -60,13 +61,14 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
+          haxelib install hxcpp --quiet
           haxelib install hxpkg
           haxelib run hxpkg install
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
+        run: haxelib run lime build windows
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
@@ -86,12 +88,13 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
+          haxelib install hxcpp --quiet
           haxelib install hxpkg
           haxelib run hxpkg install
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}"
+        run: haxelib run lime build mac
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
