--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib install hxcpp --quiet
+          haxelib install hxcpp -y
           haxelib install hxpkg
           haxelib run hxpkg install
       - name: Create Version Tag
@@ -61,7 +61,7 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
-          haxelib install hxcpp --quiet
+          haxelib install hxcpp -y
           haxelib install hxpkg
           haxelib run hxpkg install
         shell: cmd
@@ -88,7 +88,7 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib install hxcpp --quiet
+          haxelib install hxcpp -y
           haxelib install hxpkg
           haxelib run hxpkg install
       - name: Create Version Tag
