just trying stuff at this point

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,6 @@ jobs:
           haxelib install hxcpp
           haxelib install hxpkg
           haxelib run hxpkg install
-          .haxelib/hxcpp/4,3,2/
           cd tools/hxcpp
           haxe compile.hxml
       - name: Create Version Tag
@@ -65,6 +64,8 @@ jobs:
         run: |
           haxelib setup C:/haxelib
           haxelib install hxcpp
+          cd C:/haxelib/hxcpp/4,3,2/tools/hxcpp/
+          haxe compile.hxml
           haxelib install hxpkg
           haxelib run hxpkg install
         shell: cmd
