--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,15 +62,10 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
+      - name: Install Haxelib
+        run: |
           haxelib setup C:/haxelib
-          haxelib --global install hxcpp
-          cd C:/
-          cd haxelib
-          cd hxcpp
-          cd 4,3,2
-          cd tools
-          cd hxcpp
-          haxe compile.hxml
+          haxelib install hxcpp > /dev/null --quiet
           haxelib install hxpkg
           haxelib run hxpkg install
         shell: cmd
@@ -78,7 +73,6 @@ jobs:
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: | 
-          haxelib list
           haxelib run lime build windows
       - name: Publish Artifact
         uses: actions/upload-artifact@main
