--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,14 +54,12 @@ jobs:
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v2.3.0
 
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: latest
+          haxe-version: 4.3.4
       # Runs a set of commands using the runners shell
-      - name: Install Haxelib
-        run: |
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
@@ -72,10 +70,9 @@ jobs:
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: | 
-          haxelib run lime build windows
+        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v2.2.4
         with:
           name: windowsBuild
           path: export/release/windows/bin
