--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,39 +16,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  buildLinux:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@main
-
-      - uses: krdlab/setup-haxe@master
-        with:
-          haxe-version: latest
-      # Runs a set of commands using the runners shell
-      - name: Install Haxelib
-        run: |
-          haxelib setup ~/haxelib
-          haxelib install hxcpp
-          haxelib install hxpkg
-          haxelib run hxpkg install
-          cd tools/hxcpp
-          haxe compile.hxml
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
-      - name: Compile
-        run: |
-          haxelib list
-          haxelib run lime build linux
-      - name: Publish Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: linuxBuild
-          path: 'export/release/linux/bin'
   buildWindows:
     runs-on: windows-latest
 
@@ -64,8 +31,7 @@ jobs:
         run: |
           haxelib setup C:/haxelib
           haxelib install hxcpp > /dev/null --quiet
-          haxelib install hxpkg
-          haxelib run hxpkg install
+          .\"windows.bat"
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
@@ -75,32 +41,4 @@ jobs:
         uses: actions/upload-artifact@v2.2.4
         with:
           name: windowsBuild
-          path: export/release/windows/bin
-  buildMac:
-    runs-on: macos-latest
-
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@main
-
-      - uses: krdlab/setup-haxe@master
-        with:
-          haxe-version: latest
-      # Runs a set of commands using the runners shell
-      - name: Install Haxelib
-        run: |
-          haxelib setup ~/haxelib
-          haxelib install hxcpp
-          haxelib install hxpkg
-          haxelib run hxpkg install
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
-      - name: Compile
-        run: | 
-          haxelib list
-          haxelib run lime build mac
-      - name: Publish Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: macBuild
-          path: export/release/macos/bin
+          path: export/test/windows/bin
