--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,16 +21,21 @@ jobs:
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2.3.0
+      - name: Checkout
+        uses: actions/checkout@v2.3.0
 
-      - uses: krdlab/setup-haxe@master
+      - name: Install Haxe
+        uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.3.4
       # Runs a set of commands using the runners shell
-      - name: Install Haxelib
+      - name: Install HXCPP
         run: |
           haxelib install hxcpp
-          .\"windows.bat"
+      - name: Install HXPKG
+        run: |
+          haxelib install hxpkg
+          haxelib run hxpkg install
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
