--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,29 +21,28 @@ jobs:
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2.3.0
+      - uses: actions/checkout@main
 
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.3.4
+          haxe-version: latest
       # Runs a set of commands using the runners shell
       - name: Install HXCPP
         run: |
           haxelib install hxcpp
         shell: cmd
 
-      - name: Install HXPKG
+      - name: Install Libraries
         run: |
-          haxelib install hxpkg
-          haxelib run hxpkg install
+          .\"windows.bat"
         shell: cmd
 
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
+        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}" -encorerelease
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2.2.4
+        uses: actions/upload-artifact@main
         with:
           name: Encore-Hx-Win64
-          path: export/test/windows/bin
+          path: export/release/windows/bin
