--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install Libraries
         run: |
-          .\"windows.bat"
+          .\"setup/windows.bat"
         shell: cmd
 
       - name: Create Version Tag
@@ -45,4 +45,62 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: Encore-Hx-Win64
-          path: export/release/windows/bin
+          path: export/test/windows/bin
+  buildMacOS:
+    runs-on: macos-12
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@main
+
+      - uses: krdlab/setup-haxe@master
+        with:
+          haxe-version: 4.3.4
+      # Runs a set of commands using the runners shell
+      - name: Install HXCPP
+        run: |
+          haxelib install hxcpp
+
+      - name: Install Libraries
+        run: |
+          chmod +x ./setup/unix.sh
+          sh ./setup/unix.sh
+      - name: Create Version Tag
+        run: echo "${{github.run_id}}" > VERSION
+      - name: Compile
+        run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}" -encorerelease
+      - name: Publish Artifact
+        uses: actions/upload-artifact@main
+        with:
+          name: Encore-Hx-Mac
+          path: export/test/macos/bin
+
+  buildLinux:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@main
+
+      - uses: krdlab/setup-haxe@master
+        with:
+          haxe-version: 4.3.4
+      # Runs a set of commands using the runners shell
+      - name: Install HXCPP
+        run: |
+          haxelib install hxcpp
+      - name: Install Libraries
+        run: |
+          chmod +x ./setup/unix.sh
+          sh ./setup/unix.sh
+      - name: Create Version Tag
+        run: echo "${{github.run_id}}" > VERSION
+      - name: Compile
+        run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}" -encorerelease
+      - name: Publish Artifact
+        uses: actions/upload-artifact@main
+        with:
+          name: Encore-Hx-Linux
+          path: 'export/release/linux/bin'
