--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,6 @@ jobs:
           .\"setup/windows.bat"
         shell: cmd
 
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}" -encorerelease
       - name: Publish Artifact
@@ -46,6 +44,30 @@ jobs:
         with:
           name: Encore-Hx-Win64
           path: export/test/windows/bin
+
+  buildBrowser:
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@main
+
+      - uses: krdlab/setup-haxe@master
+        with:
+          haxe-version: 4.3.4
+      # Runs a set of commands using the runners shell
+      - name: Install Libraries
+        run: |
+          .\"setup/windows.bat"
+        shell: cmd
+
+      - name: Compile
+        run: haxelib run lime build html5 --app-version="4.0.0-${{ github.run_id}}" -encorerelease
+      - name: Publish Artifact
+        uses: actions/upload-artifact@main
+        with:
+          name: Encore-Hx-Html5
+          path: export/test/html5/bin
+
   buildMacOS:
     runs-on: macos-12
 
@@ -65,8 +87,7 @@ jobs:
         run: |
           chmod +x ./setup/unix.sh
           sh ./setup/unix.sh
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
+
       - name: Compile
         run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}" -encorerelease
       - name: Publish Artifact
@@ -95,12 +116,11 @@ jobs:
         run: |
           chmod +x ./setup/unix.sh
           sh ./setup/unix.sh
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
+          
       - name: Compile
         run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}" -encorerelease
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
           name: Encore-Hx-Linux
-          path: 'export/release/linux/bin'
+          path: 'export/test/linux/bin'
