--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,7 @@ jobs:
         run: |
           chmod +x ./setup/unix.sh
           sh ./setup/unix.sh
-          
+
       - name: Compile
         run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}" -encorerelease
       - name: Publish Artifact
@@ -124,3 +124,46 @@ jobs:
         with:
           name: Encore-Hx-Linux
           path: 'export/test/linux/bin'
+
+  buildAndroid: # https://github.com/MobilePorting/FNF-PsychEngine-Base-Mobile/blob/main/.github/workflows/mobile-release.yml#L4
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@main
+
+      - name: Setup Java JDK
+        uses: actions/setup-java@main
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Haxe
+        uses: krdlab/setup-haxe@master
+        with:
+          haxe-version: 4.3.4
+
+      - name: Install HXCPP
+        run: |
+          haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp 8dd30d69399f616f4e85295ce3f828219b78af17 --quiet
+
+      - name: Install Libraries
+        run: |
+          chmod +x ./setup/unix.sh
+          sh ./setup/unix.sh
+
+      - name: Configure Android
+        run: |
+          haxelib run lime config ANDROID_SDK $ANDROID_HOME
+          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_LATEST_HOME
+          haxelib run lime config JAVA_HOME $JAVA_HOME
+          haxelib run lime config ANDROID_SETUP true 
+
+      - name: Compile
+        run: haxelib run lime build android -encorerelease
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@main
+        with:
+          name: androidBuild
+          path: export/test/android/bin/app/build/outputs/apk/release/*.apk
+          if-no-files-found: error
