Disable the project.xml stuff

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,6 +164,6 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@main
         with:
-          name: androidBuild
+          name: Encore-Hx-Android
           path: export/test/android/bin/app/build/outputs/apk/release/*.apk
           if-no-files-found: error
